# autoeval

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  LICENSE  README.md  xmake.lua
.github/workflows/: ci.yml
cli/: main.cpp
docs/: API.md  ARCHITECTURE.md  Metrics.md  PluginGuide.md  QUICKSTART.md  TROUBLESHOOTING.md
examples/configs/: basic_eval.yaml
examples/data/: sample_trajectory.json
include/autoeval/: autoeval.h  version.h
include/autoeval/core/: context.h  evaluator.h  types.h
include/autoeval/loader/: data_loader.h
include/autoeval/metrics/: base_metric.h
include/autoeval/plugin/: plugin_interface.h
include/autoeval/report/: report_generator.h
plugins/: xmake.lua
plugins/example_metric/src/: binary_loader.cpp  hard_brake_metric.cpp
src/core/: context.cpp  evaluator.cpp  evaluator_impl.cpp
src/loader/: data_loader.cpp
src/metrics/: base_metric.cpp  registry.cpp
src/plugin/: plugin_manager.cpp
src/report/: report_generator.cpp
tests/integration/: test_benchmark.cpp  test_evaluator.cpp  test_metrics.cpp
tests/unit/: test_loader.cpp  test_metrics.cpp  test_plugin.cpp  test_types.cpp
